<resources>
    <string name="app_name">Relish</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_sms">SMSVerificationActivity</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email address</string>
    <string name="hint_username">Username</string>
    <string name="hint_fullname">Full Name</string>
    <string name="slogan">add friends, add flavor</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="button_login">Sign In</string>
    <string name="button_signin_with_facebook">Sign in with Facebook</string>
    <string name="button_signup_with_facebook">Sign up with Facebook</string>
    <string name="button_signup">Sign Up</string>
    <string name="user_not_found">User not found</string>
    <string name="error_email_empty">Please enter a valid email address</string>
    <string name="error_username_empty">Please enter a username</string>
    <string name="error_email">Invalid email</string>
    <string name="error_password">Password must contain more than 3 characters</string>
    <string name="signing_up_loader_text">Signing up…</string>
    <string name="logging_in_loader_text">Logging in…</string>
    <string name="menu_open">open</string>
    <string name="menu_close">close</string>
    <string name="places_nav_drawer_item">Places</string>
    <string name="invites_nav_drawer_item">Invites</string>
    <string name="friends_nav_drawer_item">Friends</string>
    <string name="settings_nav_drawer_item">Settings</string>
    <string name="help_nav_drawer_item">Help</string>
    <string name="open_drawer">Open the menu</string>
    <string name="close_drawer">Close the menu</string>
    <string name="detecting_location">Detecting your location…</string>
    <string name="gps_disabled_message">Relish needs your location in order to show you nearby places to eat, please go to Settings and turn your location on.</string>
    <string name="internet_disabled_message">A connection to the internet is required to use Relish. Please try again later after establishing an internet connection</string>
    <string name="unable_get_places_gps">Could not load places, GPS must be turned on</string>
    <string name="unable_get_places_internet">Could not load places, no internet connection</string>
    <string name="problems_with_loading">There are some problems with connection to server</string>
    <string name="no_places">There are no places around you</string>
    <string name="no_place_details">We don\'t have information about this place</string>
    <string name="reviews_title">Recent Reviews</string>
    <string name="read_more">READ MORE</string>
    <string name="no_gps">No GPS Signal Detected</string>
    <string name="no_internet">No Internet</string>
    <string name="add_friends_title">Add friends</string>
    <string name="invite_friends_list_empty">You haven\'t added any friends yet</string>
    <string name="friends_list_empty">You haven\'t added any friends. Tap the button below to find your friends and add them</string>
    <string name="invites_list_empty">You don\'t have any invites yet.\nYour invites will be shown here once you get or create them</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="relish_users_search_hint">Username or email</string>
    <string name="progress_button_idle">Add</string>
    <string name="progress_button_completed">Friends</string>
    <string name="contacts_permission_declined">You didn\'t give an access to your contacts</string>
    <string name="email_contacts_permission_declined">You didn\'t give an access to your email contacts</string>
    <string name="no_contacts">You don\'t seem to have any contacts</string>
    <string name="no_email_contacts">You don\'t seem to have any email contacts</string>
    <string name="no_results_for_query">No results for your query</string>
    <string name="add_friends_users_title">USERS</string>
    <string name="add_friends_contacts_title">CONTACTS</string>
    <string name="add_friends_facebook_title">FACEBOOK</string>
    <string name="invite_continue">CONTINUE</string>
    <string name="invite_send">SEND</string>
    <string name="invite_update">UPDATE INVITE</string>
    <string name="invite_friends_title">Add People</string>
    <string name="invite_details_invite_title">Invite Title</string>
    <string name="invite_details_location">Location</string>
    <string name="invite_details_time">Time</string>
    <string name="invite_details_date">Date</string>
    <string name="invite_details_reminder">Reminder</string>
    <string name="invite_send_sendto">Send to</string>
    <string name="persons_more">more</string>
    <string name="enter_title_hint">Enter title</string>
    <string name="note_hint">Note</string>
    <string name="no_reminder">No reminder</string>
    <string name="reminder_15_mins">15 minutes before</string>
    <string name="reminder_30_mins">30 minutes before</string>
    <string name="reminder_1_hour">1 hour before</string>
    <string name="reminder_2_hours">2 hours before</string>
    <string name="invited_title">AWAITING RESPONSE</string>
    <string name="accepted_title">WHO\'S GOING</string>
    <string name="declined_title">WHO ISN\'T GOING</string>
    <string name="accept_btn">Accept</string>
    <string name="decline_btn">Decline</string>
    <string name="all_fields_error">Nice try, but one or more fields seem to be missing.</string>
    <string name="one_field_error" formatted="false">Oops! Please enter a %s for this invite.</string>
    <string name="friends_error">Put the beer down, and please select some friends for this invite.</string>
    <string name="share_message">Share Invite</string>
    <string name="alert_update_push_message" formatted="false">%s has made a change to your invite!</string>
    <string name="share_sms_message" formatted="false">Hey, your friend %s just invited you to join them at %s, on %s, at %s via Relish! \nInvite Code: %s\n\nReply YES %s to accept your invite, or NO %s to decline. \n\nYou can also download the Relish app to see who else is going, and get more details at http://relishwith.us</string>
    <string name="share_push_message" formatted="false">Hey, %s has just invited you to eat at %s, on %s, at %s!</string>
    <string name="share_social" formatted="false">I\'ve just invited some friends to join me at %s via the #RelishApp! http://relishwith.us</string>
    <string name="user_response" formatted="fasle">%s has responded to your invite!</string>
    <string name="app_url" translatable="false">http://www.google.com/</string>
    <string name="invite_contact_message">Hey, I\'m using the Relish app to find new places to eat, and invite my friends to join me. Check it out! \n\nhttp://relishwith.us</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_time">Enter time</string>
    <string name="wrong_datetime">You\'re into time travel, huh? Please select a date &amp; time in the future.</string>
    <string name="cancel_invite_title">Delete Invite</string>
    <string name="cancel_invite_message">Do you really want to delete the invite?</string>
    <string name="action_accept">ACCEPT</string>
    <string name="action_decline">NO, THANKS</string>
    <string name="welcome_skip">SKIP</string>
    <string name="welcome_ok">OK</string>
    <string name="welcome_1_header">Find your favorite places to eat</string>
    <string name="welcome_1_sub">Pick from nearby places, or search &amp;\n discover new places to get your grub on</string>
    <string name="welcome_2_header">Invite Friends</string>
    <string name="welcome_2_sub">Good food is always better with company.\n Organize your friends, and invite them to eat!</string>
    <string name="welcome_3_header">Don\'t skimp on the details</string>
    <string name="welcome_3_sub">Add details and set a reminder, so your\n friends don\'t hate you</string>
    <string name="welcome_4_header">Push Notifications</string>
    <string name="welcome_4_sub">Everyone invited gets a notification, and\n can accept or decline your invite. Hopefully they accept! :) </string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="type_brasseries">Brasseries</string>
    <string name="type_buffets">Buffets</string>
    <string name="type_caribbean">Caribbean</string>
    <string name="type_chinese">Chinese</string>
    <string name="type_delis">Delis</string>
    <string name="type_greek">Greek</string>
    <string name="type_halal">Halal</string>
    <string name="type_japanese">Japanese</string>
    <string name="type_kosher">Kosher</string>
    <string name="type_soul_food">Soulfood</string>
    <string name="type_thai">Thai</string>
    <string name="header_sort_by">I\'M IN THE MOOD FOR</string>
    <string name="header_clear">CLEAR</string>
    <string name="header_done">DONE</string>
    <string name="upload_avatar">Upload Avatar</string>
    <string name="avatar_choose_message">How do you want to upload your avatar?</string>
    <string name="avatar_from_camera">From Camera</string>
    <string name="avatar_from_gallery">From Gallery</string>
    <string name="settings_rating_dialog_title">RATE YOUR EXPERIENCE</string>
    <string name="settings_rating_dialog_message">We\'d love to know your opinion. How would you rate Relish so far?</string>
    <string name="settings_rating_dialog_thanks">THANKS FOR THE RATING!</string>
</resources>