<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/loader_background"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/filter_clear"
        android:text="@string/header_clear"
        android:layout_alignParentTop="true"
        android:textColor="@color/main_color"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        android:layout_marginRight="120dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/filter_done"
        android:text="@string/header_done"
        android:layout_alignParentTop="true"
        android:textColor="@color/main_color"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/filter_sort_by"
        android:layout_alignParentLeft="true"
        android:text="@string/header_sort_by"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>

    <RelativeLayout
        android:layout_below="@id/filter_sort_by"
        android:layout_alignLeft="@id/filter_sort_by"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/type_caribbean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/places_categories_text_size"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:text="@string/type_caribbean"
        android:textColor="@color/add_friend_radio_color"
        android:background="@drawable/add_friend_radio_background"
        android:clickable="true" />


        <TextView
            android:id="@+id/type_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/places_categories_text_size"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:layout_toRightOf="@id/type_caribbean"
            android:layout_marginRight="10dp"
            android:text="@string/type_chinese"
            android:textColor="@color/add_friend_radio_color"
            android:background="@drawable/add_friend_radio_background"
            android:clickable="true" />


        <TextView
            android:id="@+id/type_delis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/places_categories_text_size"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:layout_toRightOf="@id/type_chinese"
            android:layout_marginRight="10dp"
            android:text="@string/type_delis"
            android:textColor="@color/add_friend_radio_color"
            android:background="@drawable/add_friend_radio_background"
            android:clickable="true" />

        <TextView
            android:id="@+id/type_thai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/places_categories_text_size"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:layout_below="@id/type_caribbean"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:text="@string/type_thai"
            android:textColor="@color/add_friend_radio_color"
            android:background="@drawable/add_friend_radio_background"
            android:clickable="true" />


        <TextView
            android:id="@+id/type_soulfood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/places_categories_text_size"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_below="@id/type_thai"
            android:layout_marginRight="10dp"
            android:text="@string/type_soul_food"
            android:textColor="@color/add_friend_radio_color"
            android:background="@drawable/add_friend_radio_background"
            android:clickable="true" />

        <TextView
            android:id="@+id/type_buffets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/places_categories_text_size"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_below="@id/type_chinese"
            android:layout_toRightOf="@+id/type_japanese"
            android:layout_marginRight="10dp"
            android:text="@string/type_buffets"
            android:textColor="@color/add_friend_radio_color"
            android:background="@drawable/add_friend_radio_background"
            android:clickable="true" />

        <TextView
            android:id="@+id/type_japanese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/places_categories_text_size"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_below="@id/type_chinese"
            android:layout_toRightOf="@id/type_thai"
            android:layout_marginRight="10dp"
            android:text="@string/type_japanese"
            android:textColor="@color/add_friend_radio_color"
            android:background="@drawable/add_friend_radio_background"
            android:clickable="true" />

        <TextView
            android:id="@+id/type_kosher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/places_categories_text_size"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_below="@id/type_soulfood"
            android:layout_marginRight="10dp"
            android:text="@string/type_kosher"
            android:textColor="@color/add_friend_radio_color"
            android:background="@drawable/add_friend_radio_background"
            android:clickable="true" />

        <TextView
            android:id="@+id/type_brasserie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/places_categories_text_size"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/type_soulfood"
            android:layout_below="@id/type_japanese"
            android:layout_marginRight="10dp"
            android:text="@string/type_brasseries"
            android:textColor="@color/add_friend_radio_color"
            android:background="@drawable/add_friend_radio_background"
            android:clickable="true" />


        <TextView
            android:id="@+id/type_greek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/places_categories_text_size"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/type_kosher"
            android:layout_below="@id/type_soulfood"
            android:layout_marginRight="10dp"
            android:text="@string/type_greek"
            android:textColor="@color/add_friend_radio_color"
            android:background="@drawable/add_friend_radio_background"
            android:clickable="true" />

        <TextView
            android:id="@+id/type_halal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/places_categories_text_size"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/type_greek"
            android:layout_below="@id/type_soulfood"
            android:layout_marginRight="10dp"
            android:text="@string/type_halal"
            android:textColor="@color/add_friend_radio_color"
            android:background="@drawable/add_friend_radio_background"
            android:clickable="true" />



    </RelativeLayout>

</RelativeLayout>