<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/fragment_background"
    android:id="@+id/rating_dialog_root"
    android:minHeight="220dp"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvRateTitle"
        android:text="@string/settings_rating_dialog_title"
        android:textColor="@color/main_color"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tvRateMessage"
        android:layout_marginTop="30dp"
        android:text="@string/settings_rating_dialog_message"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <RatingBar
        android:id="@+id/rbRatingBar"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="0.0"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tvThanksOrStore"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/add_friend_radio_background"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/add_friend_radio_color"
        android:visibility="gone"
        android:text="@string/settings_rating_dialog_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>