<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="#00000000"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"

        android:background="@color/fragment_background"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/dialog_title_container"
            android:layout_width="match_parent"

            android:background="@drawable/relish_bg_pattern"
            android:layout_height="55dp">


            <TextView
                android:id="@+id/dialog_title"
                android:text="@string/upload_avatar"
                android:textColor="@android:color/white"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>


        <TextView
            android:id="@+id/upload_avatar_message"
            android:text="@string/avatar_choose_message"
            android:textColor="#000"
            android:layout_below="@id/dialog_title_container"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_below="@id/upload_avatar_message"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:textColor="@color/add_friend_radio_color"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/from_camera"
                android:text="@string/avatar_from_camera"
                android:background="@drawable/add_friend_radio_background"
                android:padding="8dp"
                android:textSize="16sp"
                android:clickable="true"
                android:textColor="@color/add_friend_radio_color"
                android:layout_marginLeft="26dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/from_gallery"
                android:text="@string/avatar_from_gallery"
                android:background="@drawable/add_friend_radio_background"
                android:padding="8dp"
                android:clickable="true"
                android:textSize="16sp"
                android:textColor="@color/add_friend_radio_color"
                android:layout_marginLeft="66dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_header_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="visible"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/avatar_placeholder"/>


</RelativeLayout>